Fix hr tag alignment issues, Shorter, different color navigation when scrolled past a certain point.

--- a/css/main.css
+++ b/css/main.css
@@ -798,7 +798,11 @@ hr {
     @media (min-width: 960px) {
       .contact-section .content-wrap hr {
         width: 10rem;
-        margin-left: 0; } }
+        margin-left: 0;
+        display: inline-block;
+        text-align: left; }
+        .contact-section .content-wrap hr:nth-of-type(1) {
+          display: block; } }
     @media (min-width: 680px) {
       .contact-section .content-wrap .form-wrap {
         width: 90%;
@@ -1528,6 +1532,10 @@ hr {
       margin-top: 0; } }
 .services-list hr {
   margin: 0 0 3rem; }
+  @media (min-width: 680px) {
+    .services-list hr {
+      display: inline-block;
+      text-align: left; } }
 .services-list section {
   margin-bottom: 3rem; }
   @media (min-width: 680px) {
@@ -1645,6 +1653,9 @@ form button {
   .social-media .heading {
     margin-top: 0; } }
 .social-media .social-link {
+  -webkit-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
+  transition: all 0.2s ease;
   width: 100%;
   max-width: 30rem;
   margin: 2rem auto;
