--- a/scss/components/_social-media.scss
+++ b/scss/components/_social-media.scss
@@ -7,6 +7,7 @@
 	}
 
 	.social-link {
+		@include transition-effects(.2s);
 		width: 100%;
 		max-width: 30rem;
 		margin: 2rem auto;
