--- a/scss/layouts/_contact-layout.scss
+++ b/scss/layouts/_contact-layout.scss
@@ -15,6 +15,11 @@
 			@include sm-desktop {
 				width: 10rem;
 				margin-left: 0;
+				display: inline-block;
+				text-align: left;
+				&:nth-of-type(1) {
+					display: block;
+				}
 			}
 		}
 
